# jdftx

./: .gitignore  ASE.html  BandDavidson_8h_source.html  BandMinimizer_8h_source.html  BandStructure.html  Basis_8h_source.html  BlasExtra_8h.html  BlasExtra_8h.js  BlasExtra_8h_source.html  BlasExtra__internal_8h_source.html  Blip_8h.html  Blip_8h_source.html  BrillouinZone.html  BulkDefects.html  CD.html  CNAME  ChangeLog.html  CircularDichroism.html  ColumnBundleTransform_8h_source.html  ColumnBundle_8h.html  ColumnBundle_8h.js  ColumnBundle_8h_source.html  CommandAddU.html  CommandBandProjectionParams.html  CommandBandUnfold.html  CommandBarostatVelocity.html  CommandBasis.html  CommandBgwParams.html  CommandBoxPotential.html  CommandBulkEpsilon.html  CommandCacheProjectors.html  CommandChargeball.html  CommandChargedDefect.html  CommandChargedDefectCorrection.html  CommandConfineDynamics.html  CommandConvergeEmptyStates.html  CommandCoordsType.html  CommandCoreOverlapCheck.html  CommandCoulombInteraction.html  CommandCoulombTruncationEmbed.html  (+1445 more)
fluid1D/: .gitignore  CMakeLists.txt  config.in.h  fluid1D.kdev4
fluid1D/CMake-Modules/: FindCBLAS.cmake  FindFFTW3.cmake  FindLIBXC.cmake  FindMKL.cmake
fluid1D/core/: BlasExtra.h  Data.cpp  Data.h  DataCollection.h  EnergyComponents.h  GridInfo.cpp  Operators.cpp  Operators.h  Units.h  Util.h  matrix3.h  scalar.h  vector3.h
fluid1D/core1D/: Data.cpp  Data.h  DataCollection.h  GridInfo.cpp  GridInfo.h  Operators.cpp  Operators.h
fluid1D/fluid/: ErfFMTweight.h  Euler.h  Fex.cpp  Fex.h  Fex_H2O_BondedVoids.cpp  Fex_H2O_BondedVoids.h  Fex_H2O_FittedCorrelations.cpp  Fex_H2O_FittedCorrelations.h  Fex_H2O_ScalarEOS.cpp  Fex_H2O_ScalarEOS.h  Fex_H2O_ScalarEOS_internal.h  Fex_LJ.cpp  Fex_LJ.h  Fex_TM_ScalarEOS.cpp  Fex_TM_ScalarEOS.h  FluidMixture.cpp  FluidMixture.h  FluidMixtureCorrFunc.cpp  Fmix.cpp  Fmix.h  IdealGas.cpp  IdealGas.h  IdealGasMonoatomic.cpp  IdealGasMonoatomic.h  IdealGasMuEps.cpp  IdealGasMuEps.h  IdealGasPomega.cpp  IdealGasPomega.h  IdealGasPsiAlpha.cpp  IdealGasPsiAlpha.h  MixedFMT.cpp  MixedFMT.h  Molecule.cpp  Molecule.h  S2quad.h  SO3quad.h  TranslationOperator.cpp  TranslationOperator.h
fluid1D/fluid1D/: Fex.cpp  Fex.h  Fex_H2O_BondedVoids.cpp  Fex_H2O_BondedVoids.h  Fex_H2O_FittedCorrelations.cpp  Fex_H2O_Lischner10.cpp  Fex_H2O_Lischner10.h  Fex_H2O_ScalarEOS.cpp  Fex_H2O_ScalarEOS.h  Fex_LJ.cpp  Fex_LJ.h  Fex_TM_ScalarEOS.cpp  Fex_TM_ScalarEOS.h  FluidMixture.cpp  FluidMixture.h  FluidMixtureCorrFunc.cpp  Fmix.cpp  Fmix.h  IdealGas.cpp  IdealGas.h  IdealGasMonoatomic.cpp  IdealGasMonoatomic.h  IdealGasMuEps.cpp  IdealGasMuEps.h  IdealGasPomega.cpp  IdealGasPomega.h  IdealGasPsiAlpha.cpp  IdealGasPsiAlpha.h  MixedFMT.cpp  MixedFMT.h  Molecule.cpp  Molecule.h  TranslationOperator.cpp  TranslationOperator.h
fluid1D/tests/: CMakeLists.txt  CorrFunc.cpp  NonlinearEps.cpp  SigmaVsRadius.cpp  TestCFC.cpp  TestOperators.cpp  TestPlanar.cpp  TestRandom.cpp  TestSphere.cpp
jdftx/: .gitignore  CMakeLists.txt  Doxyfile.in  SourceFileTemplate.txt  config.in.h  generate_tarball.sh  jdftx-stacktrace  jdftx.cpp  jdftx.kdev4  vpt.n  vpt.rwfns
jdftx/CMake-Modules/: FindCBLAS.cmake  FindFFTW3.cmake  FindGSL.cmake  FindLAPACK_ATLAS.cmake  FindLIBXC.cmake  FindMKL.cmake  FindScaLAPACK.cmake
jdftx/aux/: CMakeLists.txt  Capacitor.cpp  CavitationH2O.cpp  CavitationLJ.cpp  ElectrostaticRadius.cpp  NonlinearEps.cpp  SO3quadConvergence.cpp  SigmaModel.cpp  SlaterDetOverlap.cpp  SolvatedCMOS.cpp  SphericalChi.cpp  TestFixedN.cpp  TestGaussian.cpp  TestOperators.cpp  TestPlanar.cpp  TestRandom.cpp  TestSchrodinger.cpp
jdftx/commands/: ParamList.h  Vexternal.cpp  basis.cpp  boxPot.cpp  chargeball.cpp  command.cpp  command.h  coords_type.cpp  core_overlap_check.cpp  coulomb_interaction.cpp  customFilling.cpp  debug.cpp  density_of_states.cpp  dielectric_response.cpp  dummy.cpp  dump.cpp  dump_name.cpp  elec_cutoff.cpp  elec_ex_corr.cpp  elec_fermi_fillings.cpp  elec_fillings.cpp  elec_initial_Haux.cpp  elec_initial_charge.cpp  elec_initial_fillings.cpp  elec_misc.cpp  elec_n_bands.cpp  fftbox.cpp  fix_electron_density.cpp  fix_occupied.cpp  fluid.cpp  fluid_coupling.cpp  fluid_gummel_loop.cpp  fluid_initial_state.cpp  fluid_ion.cpp  fluid_ion_mixing.cpp  fluid_nuclear_width.cpp  fluid_site.cpp  fluid_so3_quad.cpp  forces_output_coords.cpp  initial_state.cpp  (+34 more)
jdftx/core/: AutoThreadCount.cpp  BlasExtra.cpp  BlasExtra.cu  BlasExtra.h  BlasExtra_internal.h  Blip.cpp  Blip.h  Bspline.cpp  Bspline.h  Coulomb.cpp  Coulomb.cu  Coulomb.h  CoulombIsolated.cpp  CoulombIsolated.h  CoulombKernel.cpp  CoulombKernel.h  CoulombPeriodic.cpp  CoulombPeriodic.h  CoulombSlab.cpp  CoulombSlab.h  CoulombWire.cpp  CoulombWire.h  Coulomb_ExchangeEval.cpp  Coulomb_ExchangeEval.h  Coulomb_internal.cpp  Coulomb_internal.h  Data.cpp  Data.h  DataCollection.h  DataIO.cpp  DataIO.h  DataMultiplet.h  EnergyComponents.h  GpuKernelUtils.h  GpuUtil.cpp  GpuUtil.h  GridInfo.cpp  GridInfo.h  H5io.h  LatticeUtils.cpp  (+51 more)
jdftx/doc/: ChangeLog.dox  Compiling.dox  Contributors.dox  DevOverview.dox  Doxyfile.in  DoxygenLayout.xml  Interfacing.dox  Introduction.dox  Links.dox  Main.dox  Pseudopotentials.dox  Running.dox  Using.dox  code.dox  commands.dox  faq.dox  footer.html  references.bib
jdftx/electronic/: BandDavidson.cpp  BandDavidson.h  BandMinimizer.cpp  BandMinimizer.h  Basis.cpp  Basis.h  Blip.cpp  Blip.h  ColumnBundle.cpp  ColumnBundle.h  ColumnBundleOperators.cpp  ColumnBundleOperators.cu  ColumnBundleOperators_internal.h  ColumnBundleTransform.cpp  ColumnBundleTransform.h  Control.h  ConvCoupling.cpp  ConvCoupling.h  DOS.cpp  DOS.h  Dump.cpp  Dump.h  DumpBGW.cpp  DumpBGW_dense.cpp  DumpBGW_fluid.cpp  DumpBGW_internal.h  DumpChargedDefects.cpp  DumpCprime.cpp  DumpExcitationsMoments.cpp  DumpOcean.cpp  DumpQMC.cpp  DumpSIC.cpp  Dump_internal.h  ElecInfo.cpp  ElecInfo.h  ElecMinimizer.cpp  ElecMinimizer.h  ElecVars.cpp  ElecVars.h  ElecVars_LCAO.cpp  (+136 more)
jdftx/fluid/: CANON.cpp  CANON.h  ConvCoupling.cpp  ConvCoupling.h  ErfFMTweight.h  Euler.h  Fex.cpp  (+75 more)
(+15049 files in other folders)
